--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -25,10 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
-    "@fortawesome/pro-light-svg-icons": "^6.7.1",
-    "@fortawesome/pro-regular-svg-icons": "^6.7.1",
-    "@fortawesome/pro-solid-svg-icons": "^6.7.1",
-    "@fortawesome/pro-thin-svg-icons": "^6.7.1",
+    "angular": "^1.8.3",
     "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
@@ -39,15 +36,19 @@
     "@angular-devkit/build-angular": "^19.0.6",
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2"
   }
 }
