--- a/flask-backend/requirements.txt
+++ b/flask-backend/requirements.txt
@@ -6,3 +6,7 @@ requests==2.28.2
 flask-restful==0.3.9
 flask_cors==3.0.10
 flask-restx==1.1.0
+marshmallow==3.19.0
+flask-jwt-extended==4.4.4
+colorama
+python-dotenv
