--- a/flask-backend/.gitignore
+++ b/flask-backend/.gitignore
@@ -9,6 +9,8 @@ ENV/
 env/
 .env*
 .venv/
+wibuddy/
+
 
 # Instance folder
 instance/
@@ -51,3 +53,6 @@ coverage.xml
 .ipynb_checkpoints/
 __pychache
 __pycache__/
+
+#Personal
+Task*.pdf
